// API definition for Mint service

syntax = "proto3";

option java_multiple_files = true;
option java_package = "xyz.cornerstone.mint";
option java_outer_classname = "MintProto";

service MintService {

  rpc CreateCurrency (CreateCurrencyRequest)
      returns (CreateCurrencyResponse);

  rpc Mint (MintRequest)
      returns (MintResponse);

}

message CreateCurrencyRequest {}

message CreateCurrencyResponse {
  string currencyName = 1;
}

message MintRequest {
  string currencyName = 1;
}

message MintResponse {
  int32 newAmount = 1;
}

